# rJava

./: .Rbuildignore  .gitmodules  .prepare  DESCRIPTION  NAMESPACE  NEWS  README.md  configure  configure.ac  configure.win  getsp.java  mkdist
.github/workflows/: check.yaml
R/: 0classes.R  J.R  arrays.R  call.R  classes.R  comparison.R  completion.R  exceptions.R  gc.R  import.R  instanceof.R  jfirst.R  jinit.R  jri.R  loader.R  memprof.R  methods.R  options.R  reflection.R  rep.R  serialize.R  tools.R  with.R  zzz.R  zzz.R.in
R/windows/: FirstLib.R
jri/: Makefile.all  Makefile.in  Makevars.win  NEWS  Rengine.java  configure  configure.ac  configure.win
jri/src/: Makefile.all  Makefile.in  Rcallbacks.c  Rcallbacks.h  Rengine.c  Rinit.c  config.h.in  jri.h  rjava.c  rjava.h  rjstring.c  rjstring.h
jri/src/win32/: findjava.c
man/: J.Rd  accessOp.Rd  aslist.Rd  clone.Rd  instanceof.Rd  japply.Rd  jarray.Rd  jarrayRef-class.Rd  java-arrays.Rd  java-tools.Rd  javaImport.Rd  javaPackage.Rd  jcall.Rd  jcast.Rd  jcastToArray.Rd  jcheck.Rd  jclassName.Rd  jequals.Rd  jfield.Rd  jfloat-class.Rd  jfloat.Rd  jgc.Rd  jinit.Rd  jmemprof.Rd  jnew.Rd  jnull.Rd  jobjRef-class.Rd  jpackage.Rd  jrectRef-class.Rd  jreflection.Rd  jserialize.Rd  jsimplify.Rd  length.Rd  loader.Rd  print.Rd  rJava-internal.Rd  rep.Rd  show.Rd  toJava.Rd  with.Rd
src/: Makevars.in  Makevars.win  Rglue.c  arrayc.c  callJNI.c  callback.c  callback.h  config.h.in  djni.c  djni.h  dmf  fields.c  init.c  initJNI.c  install.libs.R  jni.h  jri_glue.c  loader.c  otables.c  rJava.c  rJava.h  registration.c  rjstring.c  rjstring.h  threads.h  threads.m  tools.c
src/java/: ArrayWrapper.java  ArrayWrapper_Test.java  DummyPoint.java  Makefile  NotComparableException.java  RJavaArrayIterator.java  RJavaArrayTools.java  RJavaArrayTools_Test.java  RJavaClassLoader.java  RJavaComparator.java  RJavaImport.java  RJavaTools.java  RJavaTools_Test.java  RectangularArrayBuilder.java  RectangularArrayBuilder_Test.java  RectangularArrayExamples.java  RectangularArraySummary.java
src/jri/: Makefile.all  RFactor.java  Rengine.java  configure  configure.ac
src/jri/src/: Makefile.all  Rcallbacks.c  Rdecl.h  Rengine.c  Rinit.c  Rinit.h  config.h.in  jri.c  rjava.c  rjava.h
src/jri/tools/: getsp.java
src/jvm-w32/: Makefile  findjava.c
tests/: leaks.R
tests/old/: leaks.R
